[package]
name = "thorn"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres-types = { version = "0.2", features = ["derive"] }
paste = "1"
thiserror = "1.0.24"
generic-array = "0.14.5"
indexmap = "1.9.1"

heck = { optional = true, version = "0.4.0" }
tokio-postgres = { optional = true, version = "0.7" }
textwrap = { optional = true, version = "0.16.0" }

[features]
generate = ["tokio-postgres", "heck", "textwrap"]