[package]
name = "thorn"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2021"

[workspace]
members = ["thorn_macros"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thorn_macros = { path = "./thorn_macros" }
postgres-types = "0.2"
paste = "1"
thiserror = "1.0.24"
generic-array = "1"
indexmap = "2"
itoa = "1"
tokio-postgres = { version = "0.7", default-features = false }
futures-util = { version = "0.3", default-features = false, optional = true }

heck = { optional = true, version = "0.5" }
textwrap = { optional = true, version = "0.16.0" }
smallvec = "1.10.0"

[features]
default = ["extensions", "generate"]
generate = ["heck", "textwrap", "tokio-postgres/default", "extensions"]
extensions = ["tokio-postgres/default", "futures-util"]
