[package]
name = "thorn"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2021"

[workspace]
members = ["thorn_macros"]

[[bin]]
name = "print_schema"
path = "src/bin/print_schema.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thorn_macros = { path = "./thorn_macros" }
postgres-types = "0.2"
paste = "1"
thiserror = "1.0.24"
itoa = "1"
tokio-postgres = { version = "0.7", default-features = false }
futures-util = { version = "0.3", default-features = false, optional = true }

heck = { optional = true, version = "0.5" }
textwrap = { optional = true, version = "0.16.0" }

anyhow = { version = "1.0", optional = true }
argh = { version = "0.1", optional = true }
tokio = { version = "1", optional = true, features = ["full"] }

[features]
default = ["extensions", "generate"]
generate = ["heck", "textwrap", "tokio-postgres/default", "extensions"]
extensions = ["tokio-postgres/default", "futures-util"]
print_schema = ["dep:tokio", "dep:argh", "dep:anyhow", "generate", "extensions"]
