[package]
name = "thorn_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2"
phf = "0.13"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full"] }
heck = "0.5"

[build-dependencies]
phf = { version = "0.13", default-features = false }
phf_codegen = "0.13"
